--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <body>
+<div id="root"></div>
 <script src="index.bundle.js"></script>
 </body>
