--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <body>
 <div id="root"></div>
-<script src="index.bundle.js"></script>
+<script src="test1.bundle.js"></script>
 </body>
